PROJECT(sonar)
cmake_minimum_required(VERSION 2.6)

SET(CMAKE_INSTALL_PREFIX "$ENV{HOME}/avalon/")

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE( ${QT_USE_FILE} )
INCLUDE_DIRECTORIES( ${QT_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR})

SET (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/.orogen/config")
INCLUDE(sonarBase)

# FIND_PACKAGE(KDL)
# FIND_PACKAGE(OCL)

