PROJECT(sonar_driver)
cmake_minimum_required(VERSION 2.6)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(MOICRON REQUIRED "micron")


FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE( ${QT_USE_FILE} )

INCLUDE_DIRECTORIES( ${QT_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR}
${QT_QTGUI_INCLUDE_DIR} ${MICRON_INCLUDE_DIRS})

SET (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/.orogen/config")
INCLUDE(sonar_driverBase)

# FIND_PACKAGE(KDL)
# FIND_PACKAGE(OCL)

