include(sonarTaskLib)


qt4_automoc(micron.cpp)

#qt4_automoc(${SONARAPPLIB_TASKLIB_SOURCES})
QT4_WRAP_CPP(MICRON_MOC_SRCS micron.hpp)

include_directories(
	${CMAKE_CURRENT_BINARY_DIR}
)


ADD_LIBRARY(${SONAR_TASKLIB_NAME} SHARED 
    ${SONAR_TASKLIB_SOURCES}
    ${MICRON_MOC_SRCS}
)

add_dependencies(${SONAR_TASKLIB_NAME}
    regen-toolkit)

TARGET_LINK_LIBRARIES(${SONAR_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${SONAR_TASKLIB_DEPENDENT_LIBRARIES}
    ${QT_LIBRARIES}
)

SET_TARGET_PROPERTIES(${SONAR_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${SONAR_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${SONAR_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${SONAR_TASKLIB_HEADERS}
    DESTINATION include/orocos/sonar)

