include(sonar_driverTaskLib)

qt4_automoc(
	SonarDriverMicronTask.cpp
)

QT4_WRAP_CPP(sonar_qt_header
	SonarDriverMicronTask.hpp
)

ADD_LIBRARY(${SONAR_DRIVER_TASKLIB_NAME} SHARED 
	${sonar_qt_header}
	${SONAR_DRIVER_TASKLIB_SOURCES}
)

add_dependencies(${SONAR_DRIVER_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${SONAR_DRIVER_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${SONAR_DRIVER_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${SONAR_DRIVER_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${SONAR_DRIVER_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${SONAR_DRIVER_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${SONAR_DRIVER_TASKLIB_HEADERS}
    DESTINATION include/orocos/sonar_driver)

